# euler

./: .clang-tidy  .gitignore  CHANGES.md  CMakeLists.txt  CMakePresets.json  CONFIG.md  Doxyfile.in  LICENSE  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  README.md  benchmark_all.cc  benchmark_dda.cc  benchmark_matrix_vector.cc  benchmark_simd.cc  benchmark_utils.hh  run_benchmarks.sh  run_from_build.sh
cmake/: StaticAnalysis.cmake  eulerConfig.cmake.in
examples/: 01_vector_basics.cc  02_matrix_operations.cc  03_quaternion_rotations.cc  04_angle_types.cc  05_complex_numbers.cc  06_expression_templates.cc  07_random_generation.cc  08_3d_graphics_pipeline.cc  09_coordinates.cc  CMakeLists.txt  config_demo.cc  coordinates_io_example.cc  dda_demo.cc
examples/dda/: dda_imgui_demo.cc
ext/: CMakeLists.txt
ext/doctest/: CMakeLists.txt
ext/failsafe/: CMakeLists.txt
ext/xsimd/: CMakeLists.txt
include/euler/: euler.hh
include/euler/angles/: angle.hh  angle_common.hh  angle_ops.hh  angle_traits.hh  degree.hh  radian.hh
include/euler/complex/: complex.hh  complex_ops.hh
include/euler/coordinates/: coord_transform.hh  io.hh  point2.hh  point3.hh  point_ops.hh  projective2.hh  projective3.hh
include/euler/core/: approx_equal.hh  compiler.hh  concepts.hh  error.hh  expression.hh  expression_storage.hh  scalar_ops.hh  simd.hh  temp_value.hh  traits.hh  types.hh
include/euler/dda/: aa_bspline_iterator.hh  aa_curve_iterator.hh  aa_line_iterator.hh  aa_simd.hh  arc_iterator.hh  batched_bezier_iterator.hh  batched_bspline_iterator.hh  batched_circle_iterator.hh  batched_ellipse_iterator.hh  batched_iterators.hh  batched_line_iterator.hh  batched_thick_line_iterator.hh  bezier_iterator.hh  bezier_simd.hh  bspline_iterator.hh  circle_iterator.hh  curve_iterator.hh  dda.hh  dda_math.hh  dda_traits.hh  ellipse_iterator.hh  io.hh  line_iterator.hh  mathematical_curves.hh  pixel_batch.hh  thick_line_iterator.hh
include/euler/direct/: direct_ops.hh  matrix_ops.hh  quaternion_ops.hh  transcendental_ops.hh  vector_ops.hh
include/euler/io/: io.hh
include/euler/math/: basic.hh  trigonometry.hh
include/euler/matrix/: matrix.hh  matrix_expr.hh  matrix_ops.hh  matrix_view.hh  scalar_matrix_expr.hh  specialized.hh
include/euler/quaternion/: quaternion.hh  quaternion_ops.hh
include/euler/random/: distributions.hh  random.hh  random_angle.hh  random_complex.hh  random_quaternion.hh  random_vec.hh
include/euler/vector/: scalar_vector_expr.hh  vector.hh  vector_expr.hh  vector_ops.hh  vector_traits.hh
test/: CMakeLists.txt  main.cc  test_matrix_simd.cc
test/angles/: angle_loop_example.cc  angle_ops_test.cc  angle_test.cc
test/complex/: complex_test.cc  complex_trig_test.cc
test/coordinates/: coord_transform_test.cc  coordinates_io_test.cc  point2_test.cc  point3_test.cc  projective2_test.cc  projective3_test.cc
test/core/: approx_equal_test.cc  error_test.cc  expression_test.cc  simd_test.cc  traits_test.cc  types_test.cc
test/dda/: dda_io_test.cc  test_aa_iterators.cc  test_arc_final.cc  test_arc_iterator.cc  test_batched_iterators.cc  test_bezier_iterator.cc  test_bspline_debug.cc  test_bspline_iterator.cc  test_circle_iterator.cc  test_curve_iterator.cc  test_ellipse_iterator.cc  test_line_iterator.cc  test_subpixel_accuracy.cc  test_subpixel_visual.cc
test/direct/: test_matrix_ops.cc  test_quaternion_ops.cc  test_transcendental_ops.cc  test_vector_ops.cc
test/integration/: comprehensive_ops_test.cc
test/io/: io_test.cc
test/math/: basic_complex_test.cc  basic_expr_test.cc  basic_test.cc  domain_check_test.cc  trigonometry_expr_integration_test.cc  trigonometry_expr_test.cc  trigonometry_test.cc
test/matrix/: matrix_expr_test.cc  matrix_from_basis_test.cc  matrix_layout_test.cc  matrix_multiplication_chain_test.cc  matrix_ops_test.cc  matrix_test.cc  matrix_view_test.cc  scalar_matrix_ops_test.cc  square_matrix_ops_test.cc  transpose_multiplication_test.cc  vector_matrix_ops_test.cc
test/quaternion/: quaternion_ops_test.cc  quaternion_test.cc
test/random/: distributions_test.cc  random_angle_test.cc  random_complex_test.cc  random_geom_test.cc  random_quaternion_test.cc  random_test.cc  random_vec_test.cc
test/vector/: scalar_vector_ops_test.cc  vector_basic_all_dims_test.cc  vector_expr_comprehensive_test.cc  vector_expr_simple_test.cc  vector_expr_test.cc  vector_ops_all_dims_test.cc  vector_ops_expr_test.cc  vector_orthonormal_test.cc  vector_test.cc  vector_view_test.cc
